<resources>
    <string name="app_name">Maze App</string>
    <string name="button_start">Go to Maze</string>
    <string name="text_maze_width">Width(Columns)</string>
    <string name="hint_default_size">5</string>
    <string name="text_maze_height">Height(Rows)</string>
    <string name="text_button_toggle">Buttons</string>
    <string name="text_start_point">Start Point</string>
    <string name="text_endpoint">End Point</string>
    <string name="hint_default_position">0</string>
    <string name="hint_column">Column</string>
    <string name="hint_row">Row</string>
    <string name="nothing" />
    <string name="up_button">up button</string>
    <string name="down_button">down button</string>
    <string name="left_button">left button</string>
    <string name="right_button">right button</string>
    <string name="text_seed">Map #</string>
    <string name="hint_seed">85</string>
    <string name="text_username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_create">Create</string>
    <string name="text_user_data">No User Data</string>
    <string name="button_back">Back \nto \nMenu</string>
    <string name="button_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_corridor_snap">Corridor Snap</string>
    <string name="text_you_win">You Win!!</string>
    <string name="text_seed_played">Map #</string>
    <string name="text_miss_steps">Collision with Walls: </string>
    <string name="text_revisited">Revisited: </string>
    <string name="text_total_wins">Total Wins: </string>
    <string name="button_user_settings">Set to User</string>
    <string name="button_reset_settings">Default</string>
    <string name="textTimeTaken">Time Taken: </string>
    <string name="text_total_moves">Total Moves:</string>
    <string name="player_des">Character</string>
    <string name="exit_des">Exit</string>
</resources>